# anvil-memory

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  config-script.sh  makefile  process.md  pyrightconfig.json  setup-script.sh
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  pr-request-template.md
cmake/: CompilerStandards.cmake  Functions.cmake  memory-config.cmake.in
docs/design-specification/: design-specification.aux  design-specification.blg  design-specification.fdb_latexmk  design-specification.fls  design-specification.toc
docs/design-specification/00-DocumentSettings/: Definitions.tex  PreTitle.tex  Preamble.tex
docs/design-specification/02-Body/: Allocation-Strategy.tex  Body.tex  Managing-Memory.tex  Memory-Arena.tex
docs/docs-gen/latex/: create.sh
docs/docs-gen/latex/snippet/: PreTitle.tex  Preamble.tex  Title.tex
include/anvil/memory/: arena.h
include/anvil/memory/internal/: allocator_internal.h  arena_internal.h  error_templates.h  utility_internal.h
include/anvil/memory/internal/allocation/: memory_allocation_internal.h
include/anvil/memory/internal/allocators/: linear_allocator_internal.h  linear_dynamic_allocator_internal.h  pool_allocator_internal.h  scratch_allocator_internal.h  stack_allocator_internal.h
include/anvil/memory/internal/error/: error_templates.h
src/core/: arena.c  utility_internal.c
src/core/internal/: allocator_internal.c  memory_allocation_internal.c  utility_internal.c
src/core/internal/allocation/: memory_allocation_internal.c
src/core/internal/allocators/: linear_allocator.c  linear_allocator_internal.c  linear_dynamic_allocator.c  pool_allocator_internal.c  scratch_allocator_internal.c  stack_allocator_internal.c
tests/python/: arena_memory_test.py
